# gateway

./: .gitignore  Dockerfile.backend  Dockerfile.frontend  LICENSE  README.md  Requirements.md  nginx.conf  test_gateway.py
backend/: .env  gateway.db  pyproject.toml
backend/app/: config.py  database.py  main.py  mock_services.py  models.py  schemas.py  seed_data.py
backend/app/services/: cache_service.py  gateway_service.py  oauth_service.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChangeLogViewer.tsx  FicoConfigManager.tsx  GatewayTester.tsx  LoginForm.tsx  ParameterManager.tsx
k8s/: backend-configmap.yaml  backend-deployment.yaml  delete.bat  deploy.bat  deploy.sh  frontend-deployment.yaml  ingress.yaml  init-schema.sql  namespace.yaml  postgres-configmap.yaml  postgres-deployment.yaml  postgres-init-configmap.yaml  postgres-secret.yaml  redis-deployment.yaml
karate-tests/: .project  README.md  build.gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle
karate-tests/src/test/java/: karate-config.js
karate-tests/src/test/java/data/: fico-configs.csv  gateway-requests.csv  parameters.csv
karate-tests/src/test/java/gateway/: GatewayTestRunner.java  approve-change.feature  changelogs.feature  configurations.feature  gateway.feature  reject-change.feature
