[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.13"}
psycopg = {extras = ["binary"], version = "^3.2.9"}
psycopg2-binary = "^2.9.9"
redis = "^6.2.0"
pydantic-settings = "^2.10.0"
sqlalchemy = "^2.0.41"
alembic = "^1.16.2"
python-multipart = "^0.0.20"
httpx = "^0.28.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
